# chess_engine_c

./: .gitignore  CMakeLists.txt
libs/skia_mess/: CMakeLists.txt  build.py
src/: main.cpp
src/engine/: board_evaluation.cpp  board_evaluation.h  engine.h  minmax_engine.cpp  minmax_engine.h  random_engine.cpp  random_engine.h
src/game/: ChessGameState.cpp  ChessGameState.h  ChessMove.cpp  ChessMove.h  ChessPiece.cpp  ChessPiece.h  board.cpp  board.h  find_moves.cpp  find_moves.h  move.h  piece.h
src/mcts/: GameState.h  Move.h  Node.cpp  Node.h
src/ui/: pieces_svg.h  rendermain.cpp  rendermain.h  theme.h
src/ui/layers/: background_layer.cpp  background_layer.h  moves_layer.cpp  moves_layer.h  piece_layer.cpp  piece_layer.h
src/util/: constraints.h  random.cpp  random.h
